Fix HTML/ setup basic CSS for index page
 Changes to be committed:
	modified:   index.html
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
-          <button class="close-adjustment"></button>
+          <button class="close-adjustment">X</button>
           <span>Hue</span>
           <input
             type="range"
@@ -62,7 +62,7 @@
           <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
-          <button class="close-adjustment"></button>
+          <button class="close-adjustment">X</button>
           <span>Hue</span>
           <input
             type="range"
@@ -102,7 +102,7 @@
           <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
-          <button class="close-adjustment"></button>
+          <button class="close-adjustment">X</button>
           <span>Hue</span>
           <input
             type="range"
@@ -142,7 +142,7 @@
           <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
-          <button class="close-adjustment"></button>
+          <button class="close-adjustment">X</button>
           <span>Hue</span>
           <input
             type="range"
@@ -182,7 +182,7 @@
           <button class="lock"><i class="fas fa-lock-open"></i></button>
         </div>
         <div class="sliders">
-          <button class="close-adjustment"></button>
+          <button class="close-adjustment">X</button>
           <span>Hue</span>
           <input
             type="range"
@@ -238,7 +238,7 @@
     </div>
     <div class="save-container">
       <div class="save-popup">
-        <button class="close-save"></button>
+        <button class="close-save">X</button>
         <h4>Give a name to your pallete</h4>
         <input type="text" maxlength="35" class="save-name" />
         <button type="submit" class="submit-save">Save</button>
@@ -250,15 +250,12 @@
         <h4>Pick your palette</h4>
       </div>
     </div>
-    <script>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />;
-    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
+      integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./javascript.js"></script>
   </body>
 </html>
